--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation "androidx.biometric:biometric:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -38,3 +40,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
