--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +22,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VanteaAccess"
         tools:targetApi="33">
+        <activity
+            android:name=".ServerConnection"
+            android:exported="false" />
+        <activity
+            android:name=".Scanner"
+            android:exported="false" />
         <activity
             android:name=".Logged"
             android:exported="false" />
